Minor fix in README

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 0) Create a generic directory to store git-related scripts below the user home directory
 $: mkdir -p $HOME/.git-custom
 
-1) Clone the project code somewhere below the user home directory
+1) Clone the project code below the directory with git-related scripts
 $: git clone https://github.com/denvazh/git-jautf8.git $HOME/.git-custom/git-jautf8.git
 
 2) Add lines below to either .bashrc or .bash_profile 
