--- a/share/man/man1/git-jautf8.1
+++ b/share/man/man1/git-jautf8.1
@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 28/06/2012
 .\"    Manual: Git Custom script
-.\"    Source: Based on manpages provided with Git 1.7.11.1
+.\"    Source: Based on manpages provided with Git 1.7.11.0
 .\"  Language: English
 .\"
-.TH "GIT\-JAUTF8" "1" "28/06/2012" "Git 1\&.7\&.11\&.1" "Git Manual"
+.TH "GIT\-JAUTF8" "1" "28/06/2012" "GIT\-JAUTF8 1\&.0" "Git Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
